# uav_pursuit_evasion

./: README.md
pursuit_evasion/: CMakeLists.txt  package.xml  pursuer.rviz
pursuit_evasion/launch/: MPSE_random_evasion_theta.launch  SPSE_constant_evasion_theta.launch
pursuit_evasion/src/: evasion.cpp  pursuit.cpp
